Fixed a bug where Redactor toolbar menus would get cut off at the borders of Quick Post widgets

--- a/src/resources/css/dashboard.scss
+++ b/src/resources/css/dashboard.scss
@@ -10,6 +10,8 @@
 	        box-shadow: 0 0 0 1px rgba(0,0,0,0.05), 0 2px 10px -2px rgba(0,0,0,0.1);
 }
 
+.widget.quickpost { overflow: visible; }
+
 /* dashboard */
 .widgets { position: relative; }
 .widgets #widgets { margin: 0; }
